<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Search"
            android:icon="@drawable/ic_radio_button_unchecked_black_24dp"
            android:title="@string/menu_Search" />
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_List"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_List" />
        <item
            android:id="@+id/nav_Friends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_Friends" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_Settings" />

    </group>

</menu>
